# DeepOcean

./: .gitignore  LICENSE  README.md  package-lock.json  package.json
agent-svc/: .env.example  main.py  pyproject.toml  requirements.txt
agent-svc/models/: __init__.py
agent-svc/services/: __init__.py  command_execution.py  intent_recognition.py  qwen_client.py
agent-svc/utils/: __init__.py
desktop/: package-lock.json  package.json
desktop/src/electron/main/: index.js
desktop/src/electron/main/services/: api-client.js  python-process-manager.js
desktop/src/electron/renderer/: index.html
desktop/src/electron/renderer/scripts/: main.js  voice-recognizer.js  voice-recorder.js
desktop/src/electron/renderer/scripts/ui/: border-glow.js  center-animation.js  overlay-panel.js
desktop/src/electron/renderer/styles/: animations.css  overlay.css
src/electron/main/: index.js
src/electron/preload/: index.js
src/electron/renderer/: index.html
src/electron/renderer/scripts/: animation-engine.js  main.js
src/electron/renderer/scripts/ui/: center-animation.js  overlay-panel.js
src/electron/renderer/styles/: animations.css  main.css  overlay.css
