[project]
name = "deepocean-ai-voice-agent"
version = "1.0.0"
description = "FastAPI backend service for DeepOcean AI Voice Agent"
requires-python = ">=3.8"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "dashscope>=1.14.0",
    "pydantic>=2.5.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.26.0",
    "python-multipart>=0.0.20",
    "pydub>=0.25.1",
]

[dependency-groups]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
only-include = [
    "main.py",
    "services",
    "models",
    "utils",
]
